refactor: update AGENT.md with comprehensive security guidelines and architectural constraints
- Expanded AGENT.md to include mandatory security and architectural constraints for AI agents, emphasizing critical security rules and best practices.
- Introduced detailed sections on data access architecture, input validation, error handling, authentication patterns, file upload security, rate limiting, environment variables, and session security.
- Added a security checklist and specific patterns for API routes and components to ensure adherence to security standards.
- Updated next.config.mjs to include security headers for enhanced protection against common web vulnerabilities.
- Updated package.json and pnpm-lock.yaml to include the latest version of lru-cache for improved performance and security.

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "firebase-admin": "^13.4.0",
     "happy-dom": "latest",
     "localforage": "1.10.0",
+    "lru-cache": "^11.1.0",
     "lucide-react": "^0.454.0",
     "mammoth": "^1.9.1",
     "next": "15.2.4",
